src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVCopyImage_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVCopyImage_StringErrorContext.class */
public final class NVCopyImage_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glCopyImageSubDataNV(IIIIIIIIIIIIIII)V", "net/labymod/core/laby3d/opengl/error/generated/NVCopyImageErrorContext");
        return methods;
    }
}
